--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ matrix:
     - rust: nightly
 script:
   - echo "====================="
-  - echo $My_NOT_SO_SECRET_ENV_VAR
+  - echo $MYSECRET 
   - cargo build --verbose --all
   - cargo test --verbose --all
