--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,12 +9,15 @@ pr:
 pool:
   vmImage: 'ubuntu-latest'
 
+# based on https://nbsoftsolutions.com/blog/azure-pipelines-for-rust-projects
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  - script: |
+      curl https://sh.rustup.rs -sSf | sh -s -- -y
+      echo "##vso[task.setvariable variable=PATH;]$PATH:$HOME/.cargo/bin"
+    displayName: Install rust
+  - script: cargo build --all
+    displayName: Cargo build
+  - script: cargo test --all
+    displayName: Cargo test
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
 
-  displayName: 'Run a multi-line script'
