attempt to show value of secret environmental variable
Signed-off-by: Nell Shamrell <nellshamrell@gmail.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,5 +19,10 @@ steps:
     displayName: Cargo build
   - script: cargo test --all
     displayName: Cargo test
+  - script: |
+    echo "================"
+    echo $MY_SECRET_VAR
+  env:
+    MY_SECRET_VAR: $(MYSECRET)
 
 
